--- a/src/components/global.css
+++ b/src/components/global.css
@@ -1,3 +1,46 @@
-div {
-    background-color: red;
+@font-face {
+  font-family: "robotoslab";
+  src: local("robotoslab"), url("../fonts/RobotoSlab-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+body {
+  margin: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-family: robotoslab, serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul,
+ol,
+li {
+  margin: 0;
+  padding: 0;
+  line-height: 1.1;
+  font-weight: normal;
+}
+
+p {
+  line-height: 1.3;
+}
+
+a {
+  display: inline-block;
+  color: inherit;
+  text-decoration: none;
+}
+
+img,
+video,
+iframe {
+  display: block;
+  max-width: 100%;
 }
