--- a/src/components/global.css
+++ b/src/components/global.css
@@ -10,6 +10,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: arial, serif;
+  background-color: #EAEFF3;
 }
 
 h1,
